# Faltas-Cebanc

./: .gitignore  README.md  i18n.ts  next.config.ts  notices.json  package-lock.json  package.json  tsconfig.json  version-policy.json
app/: globals.css  layout.tsx  page.tsx  updates.tsx
app/calcular/: page.tsx
app/configuracion/: page.tsx
app/dashboard/: page.tsx
app/horario/: page.tsx
app/login/: page.tsx
app/modulos/: page.tsx
app/semanal/: page.tsx
app/tendencias/: page.tsx
components/: AutoUpdate.tsx  ThemeProvider.tsx  VersionGate.tsx
components/layout/: AppShell.tsx
components/theme/: ColorEditor.tsx  ColorInput.tsx  PresetCard.tsx  PresetCreateForm.tsx  PresetSelector.tsx  ThemeActions.tsx  ThemeModeSelector.tsx  ThemePreview.tsx  index.ts
components/ui/: GlobalErrorToasts.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  loading-state.tsx  metric-card.tsx  notice-banner.tsx  select.tsx  stat-card.tsx  tabs.tsx  toast.tsx
grupos/: 2DM3.json  index.json
lib/: config.ts  utils.ts
lib/hooks/: index.ts  useColorEditor.ts  useComplexCalculations.ts  useConfigPage.ts  useConfigWithSync.ts  useDataLoader.ts  useHoursPerModule.ts  useLocale.ts  useLocaleContext.tsx  useLogin.ts  usePresetManager.ts  useRetoModuleHours.ts  useRetoTargets.ts  useServerStatus.ts  useStablePathname.ts  useStatistics.ts  useTheme.ts
lib/http/: client.ts  faltasClient.ts  index.ts  scraper.ts
lib/logging/: appLogger.ts  logger.ts
lib/server/: calculateUtils.ts  snapshot.ts  storage.ts
messages/: es.json  eu.json
src-tauri/: .gitignore  Cargo.toml  build.bat  build.rs  build.sh  latest.json  tauri.conf.json
src-tauri/empty/: index.html
src-tauri/scripts/: release.bat  release.ps1
src-tauri/src/: commands.rs  logging.rs  main.rs  sidecar.rs  state.rs
(+54 files in other folders)
