[package]
name = "faltas-cebanc"
version = "1.3.0"
description = "Faltas Cebanc"
authors = ["DM3"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"

[features]
# Enable with `--features dev` during development to include Tauri devtools
dev = ["tauri/devtools"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true


